# web-agent

./: .gitignore  README.md  main.py  package-lock.json  package.json  pyproject.toml  server.py  turbo.json
apps/backend/: main.py  package.json  pyproject.toml
apps/frontend/: package.json  pnpm-lock.yaml
apps/frontend/src/: App.css  App.jsx  index.css  main.jsx
apps/frontend/src/components/: BrowserStream.jsx  VideoPanel.jsx
apps/frontend/src/components/ui/: markdown-renderer.jsx  sonner.jsx  textarea.jsx
apps/frontend/src/hooks/: useVideoPolling.js
